--- a/packages/ui/src/styles/mixins/_box.scss
+++ b/packages/ui/src/styles/mixins/_box.scss
@@ -16,6 +16,11 @@
   height: max-content;
 }
 
+@mixin set-min-content {
+  width: min-content;
+  height: min-content;
+}
+
 @mixin set-min-size {
   min-width: $cr-box-min-width;
   min-height: $cr-box-min-height;
